<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".chopStick">

    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="155dp"
        android:rotation="180"
        android:shadowColor="@color/purple_shadow"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="8"
        android:text="@string/player_2"
        android:textColor="@color/purple_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="155dp"
        android:shadowColor="@color/purple_shadow"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="8"
        android:text="@string/player_1"
        android:textColor="@color/purple_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/p2righthand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:background="@drawable/hand1"
        android:contentDescription="@string/p2_right"
        android:rotation="180"
        android:scaleX="-0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toTopOf="@+id/player2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageButton
        android:id="@+id/p2lefthand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:background="@drawable/hand1"
        android:contentDescription="@string/p2_left"
        android:rotation="180"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toTopOf="@+id/player2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/p1lefthand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/hand1"
        android:contentDescription="@string/p1_left"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintEnd_toEndOf="@+id/p2righthand"
        app:layout_constraintStart_toStartOf="@+id/p2righthand"
        app:layout_constraintTop_toBottomOf="@+id/player1" />

    <ImageButton
        android:id="@+id/p1righthand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/hand1"
        android:contentDescription="@string/p1_right"
        android:scaleX="-0.5"
        android:scaleY="0.5"
        app:layout_constraintEnd_toEndOf="@+id/p2lefthand"
        app:layout_constraintStart_toStartOf="@+id/p2lefthand"
        app:layout_constraintTop_toBottomOf="@+id/player1" />

    <ImageView
        android:id="@+id/p2RightDot"
        android:layout_width="15dp"
        android:layout_height="115dp"
        android:contentDescription="@string/selection_dot_desc"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/p2righthand"
        app:layout_constraintStart_toStartOf="@+id/p2righthand"
        app:layout_constraintTop_toTopOf="@+id/p2righthand"
        app:srcCompat="@drawable/dot" />

    <ImageView
        android:id="@+id/p2LeftDot"
        android:layout_width="15dp"
        android:layout_height="115dp"
        android:contentDescription="@string/selection_dot_desc"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/p2lefthand"
        app:layout_constraintStart_toStartOf="@+id/p2lefthand"
        app:layout_constraintTop_toTopOf="@+id/p2lefthand"
        app:srcCompat="@drawable/dot" />

    <ImageView
        android:id="@+id/p1LeftDot"
        android:layout_width="15dp"
        android:layout_height="115dp"
        android:contentDescription="@string/selection_dot_desc"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/p1lefthand"
        app:layout_constraintEnd_toEndOf="@+id/p1lefthand"
        app:layout_constraintStart_toStartOf="@+id/p1lefthand"
        app:srcCompat="@drawable/dot" />

    <ImageView
        android:id="@+id/p1RightDot"
        android:layout_width="15dp"
        android:layout_height="115dp"
        android:contentDescription="@string/selection_dot_desc"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/p1righthand"
        app:layout_constraintEnd_toEndOf="@+id/p1righthand"
        app:layout_constraintStart_toStartOf="@+id/p1righthand"
        app:srcCompat="@drawable/dot" />

    <ImageButton
        android:id="@+id/Playbtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/play"
        android:contentDescription="@string/play_button"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageView
        android:id="@+id/p1TurnImage"
        android:layout_width="10dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/p1_dot_desc"
        app:layout_constraintBottom_toTopOf="@+id/p1lefthand"
        app:layout_constraintStart_toEndOf="@+id/player1"
        app:srcCompat="@drawable/purple_dot" />

    <ImageView
        android:id="@+id/p2TurnImage"
        android:layout_width="10dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/p2_dot_desc"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/player2"
        app:layout_constraintTop_toBottomOf="@+id/p2lefthand"
        app:srcCompat="@drawable/purple_dot" />

    <ImageButton
        android:id="@+id/p1Shuffle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/shuffle"
        android:contentDescription="@string/shuffle"
        app:layout_constraintBottom_toBottomOf="@+id/p1lefthand"
        app:layout_constraintEnd_toStartOf="@+id/p1righthand"
        app:layout_constraintStart_toEndOf="@+id/p1lefthand"
        app:layout_constraintTop_toTopOf="@+id/p1righthand"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/p2Shuffle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/shuffle"
        android:contentDescription="@string/shuffle"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/p2righthand"
        app:layout_constraintEnd_toStartOf="@+id/p2lefthand"
        app:layout_constraintStart_toEndOf="@+id/p2righthand"
        app:layout_constraintTop_toTopOf="@+id/p2lefthand" />
</androidx.constraintlayout.widget.ConstraintLayout>