<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/cardview_dark_background"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/startaboutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/cardview_dark_background"
        android:shadowColor="@color/blue_shadow"
        android:text="@string/about"
        android:textColor="@color/blue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startplayBtn" />

    <TextView
        android:id="@+id/txtWlcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:shadowColor="@color/blue_shadow"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="16"
        android:text="@string/app_name"
        android:textColor="@color/blue_text"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/purple_shadow"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="16"
        android:layout_marginTop="20dp"
        android:text="@string/meta_title"
        android:textColor="@color/purple_text"
        app:layout_constraintEnd_toEndOf="@+id/txtWlcm"
        app:layout_constraintTop_toBottomOf="@+id/txtWlcm" />

    <Button
        android:id="@+id/startplayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@color/cardview_dark_background"
        android:shadowColor="@color/blue_shadow"
        android:text="@string/play"
        android:textColor="@color/blue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWlcm" />

    <Button
        android:id="@+id/quitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/cardview_dark_background"
        android:shadowColor="@color/blue_shadow"
        android:textColor="@color/blue_text"
        android:text="@string/quit"
        app:layout_constraintEnd_toEndOf="@+id/startaboutBtn"
        app:layout_constraintStart_toStartOf="@+id/startaboutBtn"
        app:layout_constraintTop_toBottomOf="@+id/startaboutBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>