<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    app:layoutDescription="@xml/activity_about_scene"
    tools:context=".about">

    <TextView
        android:id="@+id/game_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:scrollbars="vertical"
        android:text="@string/game_desc"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:shadowColor="@color/blue_shadow"
        android:shadowRadius="16"
        android:text="@string/app_name"
        android:textColor="@color/blue_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/game_desc"
        app:layout_constraintStart_toStartOf="@+id/game_desc" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="350dp"
        android:layout_height="275dp"
        android:contentDescription="@string/chop_about_image_desc"
        app:layout_constraintEnd_toEndOf="@+id/game_desc"
        app:layout_constraintStart_toStartOf="@+id/game_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chop_about" />
</androidx.constraintlayout.motion.widget.MotionLayout>